// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Mostrar la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Imagen"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Mostrar la imagen personalizada 1`] = `
<img
  alt="Imagen"
  className="productImg undefined"
  src="https://www.img.jpg"
/>
`;
